@@ -9,9 +9,6 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
-
-import static java.util.Objects.isNull;
 
 @Service
 public class NotaService {
@@ -22,71 +19,72 @@ public class NotaService {
     @Autowired
     private UsuarioRepository usuarioRepository;
 
+    // Salvar nota
     public NotaDTO salvarNota(NotaDTO notaDTO) {
         Nota nota = converterNotaDTOParaNota(notaDTO);
-        // Relacionar nota ao usuário
-        if (notaDTO.getUsuario().getId() != null) {
-            Usuario usuario = usuarioRepository.findById(notaDTO.getUsuario().getId())
-                    .orElseThrow(() -> new IllegalArgumentException("Usuário não encontrado"));
-            nota.setUsuario(usuario);
-        }
         nota = notaRepository.save(nota);
         return converterNotaParaNotaDTO(nota);
     }
 
+    // Converter Nota para DTO
     public NotaDTO converterNotaParaNotaDTO(Nota nota) {
-        NotaDTO notaDTO = new NotaDTO();
-        notaDTO.setId(nota.getId());
-        notaDTO.setTitulo(nota.getTitulo());
-        notaDTO.setConteudo(nota.getConteudo());
-        if (nota.getUsuario().getId() != null) {
-            notaDTO.setUsuario(nota.getUsuario());
-        }
-        return notaDTO;
+        NotaDTO dto = new NotaDTO();
+        dto.setId(nota.getId());
+        dto.setTitulo(nota.getTitulo());
+        dto.setConteudo(nota.getConteudo());
+        dto.setUsuarioId(nota.getUsuario().getId()); // ✅ importante
+        return dto;
     }
 
+    // Converter DTO para Nota
     public Nota converterNotaDTOParaNota(NotaDTO notaDTO) {
         Nota nota = new Nota();
         nota.setId(notaDTO.getId());
         nota.setTitulo(notaDTO.getTitulo());
         nota.setConteudo(notaDTO.getConteudo());
 
-        if (notaDTO.getUsuario().getId() != null) {
-            Usuario usuario = usuarioRepository.findById(notaDTO.getUsuario().getId())
-                    .orElseThrow(() -> new IllegalArgumentException("Usuário não encontrado"));
+        if (notaDTO.getUsuarioId() != null) {
+            Usuario usuario = usuarioRepository.findById(notaDTO.getUsuarioId())
+                    .orElseThrow(() -> new IllegalArgumentException("Usuário não encontrado para a nota"));
             nota.setUsuario(usuario);
+        } else {
+            throw new IllegalArgumentException("UsuárioId da nota não informado");
         }
 
         return nota;
     }
 
+    // Buscar todas as notas (admin/debug)
     public List<NotaDTO> buscarTodasNotasDTO() {
         return notaRepository.findAll()
                 .stream()
                 .map(this::converterNotaParaNotaDTO)
-                .collect(Collectors.toList());
+                .toList();
     }
 
+    // Buscar notas por usuário
     public List<NotaDTO> buscarNotasPorUsuarioId(Long usuarioId) {
         return notaRepository.findByUsuarioId(usuarioId)
                 .stream()
                 .map(this::converterNotaParaNotaDTO)
-                .collect(Collectors.toList());
+                .toList();
     }
 
+    // Atualizar nota
     public NotaDTO atualizarNota(NotaDTO notaDTO) {
-        if (isNull(notaDTO.getId())) {
+        if (notaDTO.getId() == null) {
             throw new IllegalArgumentException("campo Id não informado");
         }
 
         Nota nota = notaRepository.findById(notaDTO.getId())
                 .orElseThrow(() -> new IllegalArgumentException("Nota não encontrada"));
 
+        // Atualiza campos
         nota.setTitulo(notaDTO.getTitulo());
         nota.setConteudo(notaDTO.getConteudo());
 
-        if (notaDTO.getUsuario().getId() != null) {
-            Usuario usuario = usuarioRepository.findById(notaDTO.getUsuario().getId())
+        if (notaDTO.getUsuarioId() != null) {
+            Usuario usuario = usuarioRepository.findById(notaDTO.getUsuarioId())
                     .orElseThrow(() -> new IllegalArgumentException("Usuário não encontrado"));
             nota.setUsuario(usuario);
         }
@@ -95,6 +93,7 @@ public class NotaService {
         return converterNotaParaNotaDTO(nota);
     }
 
+    // Deletar nota
     public void deletarNota(Long id) {
         notaRepository.deleteById(id);
     }
